# pogs

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CONE_INTERFACE_SUMMARY.md  CVXPY_INTERFACE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MERGE_TO_MAIN.md  README.md  READY_FOR_MERGE.md  _config.yml  index.html  index.md  mkdocs.yml  params.json  pyproject.toml  sitemap.xml  windows_build.md
.github/workflows/: ci.yml  docs.yml  publish.yml
_includes/: navigation.html
_layouts/: default.html
_pages/: pogs.md  some-page-title.md
_posts/: 2014-07-09-some-page-title.md  2014-07-10-admm.md  2014-07-10-c.md  2014-07-10-lasso.md  2014-07-10-matlab.md  2014-07-10-pogs.md  2014-07-10-r.md  2014-07-10-usage.md  2014-07-14-huber-fitting.md  2014-07-14-linear-program.md
about/authors/: index.html
about/changelog/: index.html
about/license/: index.html
api/c-api/: index.html
api/configuration/: index.html
api/proximal/: index.html
api/solver/: index.html
api/types/: index.html
cmake/: POGSConfig.cmake.in
developer/architecture/: index.html
developer/building/: index.html
developer/contributing/: index.html
developer/modernization/: index.html
docs/: index.md
docs/about/: authors.md  changelog.md  license.md
docs/api/: c-api.md  configuration.md  proximal.md  solver.md  types.md
docs/developer/: architecture.md  building.md  contributing.md  modernization.md
docs/examples/: anderson.md  lasso.md  logistic.md  sdp.md
docs/getting-started/: installation.md  quick-start.md
docs/migration/: v0.3-to-v0.4.md
docs/stylesheets/: extra.css
docs/user-guide/: advanced-features.md  basic-usage.md  c-interface.md  cone-problems.md  cvxpy-integration.md
examples/: CMakeLists.txt
examples/anderson/: index.html
examples/cpp/: Makefile  anderson_benchmark.cpp  examples.h  lasso_anderson.cpp  quantile_regression.cpp  run  run_all.cpp  test_qr.cpp
examples/cpp_cone/: Makefile  test_c_interface.c  test_sdp.cpp
examples/cpp_sp/: Makefile  examples.h  run_all.cpp
examples/lasso/: index.html
examples/logistic/: index.html
examples/sdp/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
include/pogs/: config.hpp  types.hpp
matlab/: pogs.m
migration/v0.3-to-v0.4/: index.html
python/: pogs_cone.py  pogs_cvxpy.py  pogs_graph.py  test_complete_pipeline.py  test_cone.py  test_cone_simple.py  test_cvxpy_graphform.py  test_cvxpy_interface.py  test_pogs_solver.py  verify_cvxpy_interface.py
python/benchmarks/: README.md  benchmark_utils.py  comprehensive_benchmark.py  constrained_benchmark.py  control_benchmark.py  graph_form_benchmark.py  graph_form_real_benchmark.py  libsvm_benchmark.py  maros_benchmark.py  nlp_benchmark.py  portfolio_benchmark.py  real_data_benchmark.py  run_benchmarks.py  run_industry_benchmarks.py  run_pogs_comparison.py  signal_benchmark.py
python/benchmarks/problems/: __init__.py  lasso.py  logistic.py  lp.py  portfolio.py  qp.py  sdp.py  socp.py
python/pogs/: __init__.py  cone_convert.py  cvxpy.py  graph.py
search/: search_index.json
src/: CMakeLists.txt  Makefile
src/common/: admm_state.hpp
src/cpu/: pogs.cpp
src/cpu/include/: anderson.h  equil_helper.h
src/cpu/include/gsl/: gsl_linalg.h
src/cpu/matrix/: matrix_dense.cpp
src/cpu/projector/: projector_cgls.cpp  projector_direct_dense.cpp
src/gpu/: pogs.cu
src/gpu/projector/: projector_cgls.cu
src/include/: openblas_prefix.h  pogs.h  prox_lib_cone.h  timer.h
src/include/matrix/: matrix_dense.h
src/interface_c/: pogs_c.cpp  pogs_c.h
src/interface_r/: pogs_1.0.tgz  pogs_1.0_gpu.tgz  pogs_1.0_gpu_osx.tgz
src/interface_r/pogs/src/: config.mk
tests/: CMakeLists.txt  test_c_interface.cpp  test_cone_projections.cpp  test_main.cpp  test_proximal.cpp  test_solver.cpp  test_types.cpp
user-guide/advanced-features/: index.html
user-guide/basic-usage/: index.html
user-guide/c-interface/: index.html
user-guide/cone-problems/: index.html
user-guide/cvxpy-integration/: index.html
